1.3.19 2013-08-21
-----------------
- Correctly rethrowing errors after change from event emission to callbacks, compatibility with 0.10.X domains without breaking 0.8.X support.

1.3.18 2013-08-10
-----------------
- Fixed issue when throwing exceptions in MongoClient.connect/Db.open (Issue #1057)
- Fixed an issue where _events is not cleaned up correctly causing a slow steady memory leak.

1.3.17 2013-08-07
-----------------
- Ignore return commands that have no registered callback
- Made collection.count not use the db.command function
- Fix throw exception on ping command (Issue #1055)

1.3.16 2013-08-02
-----------------
- Fixes connection issue where lots of connections would happen if a server is in recovery mode during connection (Issue #1050, NODE-50, NODE-51)
- Bug in unlink mulit filename (Issue #1054)

1.3.15 2013-08-01
-----------------
- Memory leak issue due to node Issue #4390 where _events[id] is set to undefined instead of deleted leading to leaks in the Event Emitter over time

1.3.14 2013-08-01
-----------------
- Fixed issue with checkKeys where it would error on X.X

1.3.13 2013-07-31
-----------------
- Added override for checkKeys on insert/update (Warning will expose you to injection attacks) (Issue #1046)
- BSON size checking now done pre serialization (Issue #1037)
- Added isConnected returns false when no connection Pool exists (Issue #1043)
- Unified command handling to ensure same handling (Issue #1041, #1042)
- Correctly emit "open" and "fullsetup" across all Db's associated with Mongos, ReplSet or Server (Issue #1040)
- Correctly handles bug in authentication when attempting to connect to a recovering node in a replicaset.
- Correctly remove recovering servers from available servers in replicaset. Piggybacks on the ping command.
- Removed findAndModify chaining to be compliant with behavior in other official drivers and to fix a known mongos issue.
- Fixed issue with Kerberos authentication on Windows for re-authentication.